add classnames library, context, HOC, curday style

--- a/src/components/Calendar/CalendarBody/Month/Month.module.css
+++ b/src/components/Calendar/CalendarBody/Month/Month.module.css
@@ -1,5 +1,12 @@
 .days {
     color: grey;
     font-size: 18px;
+    font-weight: 300;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.day-of-week {
+    color: crimson;
+    font-size: 18px;
     font-weight: 400;
 }
