--- a/src/components/Calendar/CalendarBody/Day/Day.module.css
+++ b/src/components/Calendar/CalendarBody/Day/Day.module.css
@@ -2,9 +2,13 @@
     padding: 0.66vw;
 }
 
+.today {
+    border-radius: 50%;
+    border: 4px solid gray;
+}
+
 .current {
     color: crimson;
     border-radius: 50%;
     border: 4px solid crimson;
-    box-sizing: border-box;
 }
